--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -1,53 +1,44 @@
 ﻿@page "/"
+@using Clients
 @using Models
 
 <PageTitle>Home</PageTitle>
 
-<table class="table table-striped table-bordered table-hover">
-   <thead class="table-dark">
-      <th>Id</th>
-      <th>Name</th>
-      <th>Genre</th>
-      <th>Price</th>
-      <th>Release Date</th>
-   </thead>
-   <tbody>
-      @foreach (var game in games)
-      {
-         <tr>
-            <td>@game.Id</td>
-            <td>@game.Name</td>
-            <td>@game.Genre</td>
-            <td>@game.Prize</td>
-            <td>@game.ReleaseDate</td>
-         </tr>
-      }
-   </tbody>
-</table>
+@if (games is null)
+{
+   <p><em>Loading...</em></p>
+}
+else
+{
+   <table class="table table-striped table-bordered table-hover mt-3">
+      <thead class="table-dark">
+         <th>Id</th>
+         <th>Name</th>
+         <th>Genre</th>
+         <th>Price</th>
+         <th>Release Date</th>
+      </thead>
+      <tbody>
+         @foreach (var game in games)
+         {
+            <tr>
+               <td>@game.Id</td>
+               <td>@game.Name</td>
+               <td>@game.Genre</td>
+               <td>@game.Prize</td>
+               <td>@game.ReleaseDate</td>
+            </tr>
+         }
+      </tbody>
+   </table>
+}
 
 @code {
-   private GameSummary[] games =
+   private GamesClient client = new();
+   private GameSummary[]? games;
+
+   protected override void OnInitialized()
    {
-      new() {
-         Id = 1,
-         Name = "Street Fighter II",
-         Genre = "Fighting",
-         Prize = 19.99M,
-         ReleaseDate = new DateOnly(1992, 7, 15)
-      },
-      new() {
-         Id = 2,
-         Name = "Final Fantasy XIV",
-         Genre = "Roleplaying",
-         Prize = 59.99M,
-         ReleaseDate = new DateOnly(2010, 9, 30)
-      },
-      new() {
-         Id = 3,
-         Name = "FIFA 23",
-         Genre = "Sports",
-         Prize = 69.99M,
-         ReleaseDate = new DateOnly(2022, 9, 27)
-      }
-   };
+      games = client.GetGames();
+   }
 }
