Changed NavMenu to reflect tutorial navbar.

--- a/GameStore.Frontend/Components/Layout/NavMenu.razor
+++ b/GameStore.Frontend/Components/Layout/NavMenu.razor
@@ -1,4 +1,10 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<nav class="navbar bg-body-tertiary" data-bs-theme="dark">
+    <div class="container">
+        <span class="navbar-brand mb-0 h1">Game Store</span>
+    </div>
+</nav>
+
+<!-- <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">GameStore.Frontend</a>
     </div>
@@ -27,4 +33,4 @@
         </div>
     </nav>
 </div>
-
+ -->
