--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -15,7 +15,7 @@ else
          <th>Id</th>
          <th>Name</th>
          <th>Genre</th>
-         <th>Price</th>
+         <th class="text-end">Price</th>
          <th>Release Date</th>
       </thead>
       <tbody>
@@ -25,7 +25,7 @@ else
                <td>@game.Id</td>
                <td>@game.Name</td>
                <td>@game.Genre</td>
-               <td>@game.Prize</td>
+               <td class="text-end">@game.Prize</td>
                <td>@game.ReleaseDate</td>
             </tr>
          }
