--- a/GameStore.Frontend/Components/Layout/MainLayout.razor
+++ b/GameStore.Frontend/Components/Layout/MainLayout.razor
@@ -1,15 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+<NavMenu />
+<div class="container">
+    @Body
 </div>
 
 <div id="blazor-error-ui" data-nosnippet>
