--- a/GameStore.Frontend/Components/Pages/EditGame.razor
+++ b/GameStore.Frontend/Components/Pages/EditGame.razor
@@ -1,4 +1,7 @@
 ﻿@page "/editgame"
+@inject NavigationManager NavigationManager
+@inject GamesClient GamesClient
+@inject GenreClient GenreClient
 
 <PageTitle>New Game</PageTitle>
 <h3 class="mt-3">New Game</h3>
@@ -11,10 +14,13 @@ else
 {
    <div class="row">
       <div class="col-md-4">
-         <EditForm Model="@game" FormName="editGame" Onsubmit="HandleSubmit">
+         <EditForm Model="@game" FormName="editGame" OnValidSubmit="HandleSubmit">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <div class="mb-3">
                <label for="name">Name:</label>
                <InputText id="name" @bind-Value="game.Name" class="form-control" />
+               <ValidationMessage For="() => game.Name" />
             </div>
             <div class="mb-3">
                <label for="genre">Genre:</label>
@@ -25,16 +31,19 @@ else
                      <option value="@genre.Id">@genre.Name</option>
                   }
                </InputSelect>
+               <ValidationMessage For="() => game.GenreId" />
             </div>
             <div class="mb-3">
                <label for="prize">Prize:</label>
                <InputNumber id="prize" @bind-Value="game.Prize" class="form-control" />
+               <ValidationMessage For="() => game.Prize" />
             </div>
             <div class="mb-3">
                <label for="releaseDate">Release Date:</label>
                <InputDate id="releaseDate" @bind-Value="game.ReleaseDate" class="form-control" />
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
+            <a role="button" class="btn btn-secondary" href="/">Cancel</a>
          </EditForm>
       </div>
    </div>
@@ -44,26 +53,20 @@ else
    [SupplyParameterFromForm]
    private GameDetails game { get; set; } = new()
    {
-      Name =  string.Empty,
+      Name = string.Empty,
       ReleaseDate = DateOnly.FromDateTime(DateTime.Now)
    };
 
-   private readonly GamesClient gamesClient = new();
-   private readonly GenreClient genreClient = new();
    private Genre[]? genres;
 
    protected override void OnInitialized()
    {
-      genres = genreClient.GetGenres();
+      genres = GenreClient.GetGenres();
    }
 
    private void HandleSubmit()
    {
-      if (game.GenreId.Length == 0)
-      {
-         return;
-      }
-
-      gamesClient.AddGame(game);
+      GamesClient.AddGame(game);
+      NavigationManager.NavigateTo("/");
    }
 }
