--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -20,6 +20,7 @@ else
          <th>Genre</th>
          <th class="text-end">Price</th>
          <th>Release Date</th>
+         <th></th>
       </thead>
       <tbody>
          @foreach (var game in games)
@@ -30,6 +31,25 @@ else
                <td>@game.Genre</td>
                <td class="text-end">@game.Prize</td>
                <td>@game.ReleaseDate</td>
+               <td>
+                  <div class="d-flex">
+                     <a class="btn btn-primary me-2" role="button" href="@GameUrl(game.Id)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                           class="bi bi-pencil" viewBox="0 0 16 16">
+                           <path
+                              d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
+                        </svg>
+                     </a>
+                     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="@GetDeleteModalId(game)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg"
+                           viewBox="0 0 16 16">
+                           <path
+                              d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
+                        </svg>
+                     </button>
+                  </div>
+                  <DeleteGame Game="@game" />
+               </td>
             </tr>
          }
       </tbody>
@@ -42,5 +62,12 @@ else
    protected override void OnInitialized()
    {
       games = GamesClient.GetGames();
+   }
+
+   private static string GameUrl(int id) => $"/editgame/{id}";
+
+   private string GetDeleteModalId(GameSummary game)
+   {
+      return $"#{DeleteGame.GetModalId(game)}";
    }
 }
