--- a/GameStore.Frontend/Components/Pages/DeleteGame.razor
+++ b/GameStore.Frontend/Components/Pages/DeleteGame.razor
@@ -13,7 +13,7 @@
          <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
             <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-               @onclick="@ConfirmDelete">Delete</button>
+               @onclick="@ConfirmDeleteAsync">Delete</button>
          </div>
       </div>
    </div>
@@ -34,9 +34,9 @@
    }
 
 
-   private void ConfirmDelete()
+   private async Task ConfirmDeleteAsync()
    {
-      GamesClient.DeleteGame(Game!.Id);
+      await GamesClient.DeleteGameAsync(Game!.Id);
       NavigationManager.Refresh();
    }
 
